Home text alignment fixed for mobile devices

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -42,3 +42,10 @@ textarea {
   filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(214deg) brightness(94%)
     contrast(105%);
 }
+.img-col{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  margin-left: auto;
+  margin-right: auto;
+}
